<resources>
    <string name="app_name">Achievements</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>

    <string name="menu_home">Home</string>
    <string name="menu_achievements">Achievements</string>
    <string name="menu_goals">Goals</string>
    <string name="fab">fab</string>
    <string name="account">Account</string>
    <string name="logout">logout</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="achievement_title">Achievement Title</string>
    <string name="description">Description</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="goal">Goal</string>
    <string name="achievement">Achievement</string>
    <string name="goal_description">Goal Description</string>
    <string name="estimated_date">Estimated Date</string>
    <string name="achievements">Achievements:</string>
    <string name="goals_achieved">Goals Achieved:</string>
    <string name="goals_total">Goals Total:</string>
    <string name="long_text">This is a long example of the achievement description, meaning it\'s like a showcase of how it will look in the real life, also however, it won\'t show more than 3 lines which is good enough as a showcase.</string>
    <string name="username">Username</string>
</resources>