<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.kordia.achievements.presentation.activity.fragment.achievements.add.AchievementAddIntent" />

        <import type="com.kordia.achievements.domain.utils.TimeUtilKt" />

        <variable
            name="viewModel"
            type="com.kordia.achievements.presentation.activity.fragment.achievements.add.AchievementAddViewModel" />

        <variable
            name="createEvent"
            type="com.kordia.achievements.presentation.activity.fragment.achievements.add.AchievementAddIntent" />

        <variable
            name="updateEvent"
            type="com.kordia.achievements.presentation.activity.fragment.achievements.add.AchievementAddIntent.UpdateEvent" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_great"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Great, add your achievement to show or share it later."
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/type"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_great" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_type"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_achievement"
            app:layout_constraintStart_toEndOf="@id/tv_type"
            app:layout_constraintTop_toTopOf="@id/tv_type"
            app:tint="@color/gold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/iv_type"
            app:layout_constraintEnd_toEndOf="@id/iv_type"
            app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_type" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{listener::onClick}"
            android:text="@{TimeUtilKt.getDate(viewModel.achievementLiveData.dateAchieved)}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date_value" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/achievement_title"
            android:text="@={viewModel.achievementLiveData.title}"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/achievement_description"
            android:maxLines="6"
            android:minLines="6"
            android:text="@={viewModel.achievementLiveData.description}"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:onClick="@{() -> viewModel.achievementId == `-1` ? viewModel.onTriggerEvent(createEvent) : viewModel.onTriggerEvent(updateEvent)}"
            android:text="@{viewModel.achievementId == `-1` ? @string/create : @string/update}"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_delete"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@color/danger"
            android:onClick="@{listener::onClick}"
            android:src="@drawable/ic_delete"
            android:tint="@android:color/white"
            android:visibility="@{viewModel.achievementId == `-1` ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/bt_create"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bt_create" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>