<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="com.kordia.achievements.presentation.activity.fragment.goals.add.GoalAddIntent" />

        <import type="com.kordia.achievements.domain.utils.TimeUtilKt" />

        <variable
            name="viewModel"
            type="com.kordia.achievements.presentation.activity.fragment.goals.add.GoalAddViewModel" />

        <variable
            name="createEvent"
            type="com.kordia.achievements.presentation.activity.fragment.goals.add.GoalAddIntent.CreateEvent" />

        <variable
            name="updateEvent"
            type="com.kordia.achievements.presentation.activity.fragment.goals.add.GoalAddIntent.UpdateEvent" />

        <variable
            name="setAchievedEvent"
            type="com.kordia.achievements.presentation.activity.fragment.goals.add.GoalAddIntent.SetAchievedEvent" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_goalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/goal"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_goalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@={viewModel.goalLiveData.title}"
            app:layout_constraintTop_toBottomOf="@id/tv_goalTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_goalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_goalTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_goalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:hint="@string/goal_description"
            android:maxLines="6"
            android:minLines="6"
            android:text="@={viewModel.goalLiveData.description}"
            app:layout_constraintTop_toBottomOf="@id/tv_goalDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_estimatedDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/estimated_date"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_goalDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_estimatedDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{listener::onClick}"
            android:text="@{TimeUtilKt.getDate(viewModel.goalLiveData.dateExpected)}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_estimatedDateLabel" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="@dimen/fab_margin"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.onTriggerEvent(setAchievedEvent)}"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_checked"
            android:tint="@{viewModel.goalLiveData.achieved ? @color/success : @color/inactive}"
            app:layout_constraintBottom_toTopOf="@id/bt_create"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog"
            android:onClick="@{() -> viewModel.goalId == `-1` ? viewModel.onTriggerEvent(createEvent) : viewModel.onTriggerEvent(updateEvent)}"
            android:text="@{viewModel.goalId == `-1` ? @string/create : @string/update}"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_delete"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:background="@color/danger"
            android:onClick="@{listener::onClick}"
            android:src="@drawable/ic_delete"
            android:tint="@android:color/white"
            android:visibility="@{viewModel.goalId == `-1` ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/bt_create"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/bt_create" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>