<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kordia.achievements.presentation.activity.fragment.home.HomeViewModel" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.kordia.achievements.presentation.activity.fragment.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_home_card"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_achievementsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/achievements"
                        android:textColor="@color/success"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_achievementsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.homeStatisticsLiveData.achievements)}"
                        android:textColor="@color/success"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/tv_goalsAchievedTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_goalsAchievedTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goals_achieved"
                        android:textColor="@color/success"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_achievementsTitle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_goalsAchievedValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.homeStatisticsLiveData.achieved)}"
                        android:textColor="@color/success"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/tv_goalsAchievedTitle"
                        app:layout_constraintTop_toTopOf="@id/tv_goalsAchievedTitle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_goalsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goals_total"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_goalsAchievedTitle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_goalsValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(viewModel.homeStatisticsLiveData.goalsTotal)}"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/tv_goalsAchievedTitle"
                        app:layout_constraintTop_toTopOf="@id/tv_goalsTitle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_goalsWaiting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{listener::onClick}"
                        android:text="@{`(`+String.valueOf(viewModel.homeStatisticsLiveData.goalsWaiting)+` waiting)`}"
                        android:textColor="@color/danger"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/tv_goalsValue"
                        app:layout_constraintTop_toBottomOf="@id/tv_goalsAchievedTitle" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/fab"
            android:onClick="@{listener::onClick}"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_dodgeInsetEdges="bottom" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>